[tool.poetry]
name = "tg_bot"
version = "0.1.0"
description = ""
authors = ["Vitaliy Lobko <vitaliy.lobko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
telebot = "^0.0.5"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
zeep = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
